<?xml version="1.0" encoding="utf-8"?>
<resources>

    // General
    <string name="app_name" >NewsLine</string>
    <string name="action_settings" >Settings</string>
    <string name="page_disclaimer">The content on this page is provided by third-party providers and Newsline author is not responsible for its content</string>

    // Errors
    <string name="networkConnectionError">No network connection available.</string>

    // Warnings
    <string name="warning_no_entries_found">No entries found for the given feed</string>
    <string name="warning_feed_already_in_db">You are already following news from this provider</string>

    // Info
    <string name="unsubscribeConfermation">Do you wanna stop to follow this provider?</string>
    <string name="action_clear_entry_cache">Clear articles cache</string>
    <string name="info_article_cache_cleaned">All articles have been removed from the device.</string>
    <string name="action_dlg_msg_clear_entry_cache">Do you really want to remove all the articles stored on your device?</string>
    <string name="warning_unable_to_download_content">Unable to download content from the server,
        error:
    </string>
    <string name="msg_entry_list_updated">Entry list updated</string>

    // Drawer strings
    <string name="drawer_open">Show subscription List</string>
    <string name="drawer_close">Hide subscription list</string>
    <string name="drawer_title">Subscriptions</string>

    // Subscribe dialog
    <string name="subscribe_dialog_title">Choose your favorite topic or search for a news provider</string>
    <string name="subscribe_dialog_title2">Search for a news provider</string>

    <string name="subscribe_dialog_nofeedstext"></string>
    <string name="sharing_url_string">Check out this site! (Shared with News Hub on Android)
    </string>

    // Font Awesome icons http://fortawesome.github.io/Font-Awesome/cheatsheet/
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_share">&#xf045;</string>
    <string name="icon_globe">&#xf0ac;</string>
    <string name="icon_more">&#xf103;</string>
    <string name="icon_next">&#xf0da;</string>
    <string name="icon_prev">&#xf0d9;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_bug">&#xf188;</string>
    <string name="swipe_hand_text">Swipe to start!</string>

    // logo
    <string name="icon_rocket">&#xf143;</string>

    <string name="category_technology">tech</string>
    <string name="category_news">news</string>
    <string name="categories_finance">finance</string>
    <string name="category_games">games</string>
    <string name="categories_health">health</string>
    <string name="categories_politics">politics</string>
    <string name="category_cooking">cooking</string>
    <string name="category_travels">travels</string>
    <string name="category_gossip">gossip</string>
    <string name="category_sport">sport</string>
    <string name="category_search">&#xf002;</string>
    <string name="subscribe_editText_hint">What are you looking for?</string>
    <string name="rssParseTaskNoEntries">Unfortunately the application is not able to fetch the content for the selected feed. The error has been reported to the author.</string>
    <string name="UnableToPlayMedia">Unable to play the selected media</string>
    <string name="device_not_connected_to_internet">Application working in offline mode. Connect device to internet to fetch more data.</string>


</resources>
