<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ArticleFragmentFullViewLayout"
    android:animateLayoutChanges="true"
    >
    <org.gnuton.newshub.view.UninterceptableViewPager
        android:id="@+id/view_pager"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:layout_gravity="left|center_vertical"
        android:src="#b4d4ff"
        android:scrollY="200dp"
        />


    <org.gnuton.newshub.view.ObservableScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:fadingEdge="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:animateLayoutChanges="true"
            android:id="@+id/articleContentLayout"

            >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loading..."
                android:id="@+id/TitleTextView"
                android:layout_gravity="left|center_vertical"
                android:textAlignment="center"
                android:textSize="30sp"
                style="@style/ArticleDetailTitle"
                android:layout_marginTop="-50dp"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoLink="all"
                android:id="@+id/ContentTextView"
                android:layout_gravity="top"
                android:layout_weight="20"

                android:textSize="18sp"
                style="@style/ArticleContentText"
                android:padding="30dp"
                android:text=" " />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="#ddd9d6"
                android:layout_gravity="center">
                <com.google.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adUnitId="ca-app-pub-2675875996722758/1678484283"
                    ads:adSize="BANNER"
                    ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                    ads:loadAdOnCreate="true"
                    android:padding="20px"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/adView"
                    android:layout_centerHorizontal="true"
                    android:text="@string/page_disclaimer"
                    android:textColor="#b9b5b2"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>

        </LinearLayout>
    </org.gnuton.newshub.view.ObservableScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:id="@+id/ArticleButtonContainer"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        style="@style/ArticleButtonsContainer">
        <Button
            android:id="@+id/ShareLinkButton"
            style="@style/ArticleDetailShareLinkButton"
            android:text="@string/icon_share"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/OpenLinkButton"
            style="@style/ArticleDetailOpenLinkButton"
            android:text="@string/icon_globe"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"

            android:layout_below="@+id/ShareLinkButton"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/PreviousArticleButton"
            style="@style/PreviousArticleButton"
            android:text="@string/icon_prev"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"

            android:layout_below="@+id/OpenLinkButton"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/NextArticleButton"
            style="@style/NextArticleButton"
            android:text="@string/icon_next"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"

            android:layout_below="@+id/PreviousArticleButton"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/ReadMoreButton"
            android:text="@string/icon_more"
            style="@style/ArticleDetailMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NextArticleButton"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
</RelativeLayout>